--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,12 @@
-# Project-wide Gradle settings.
+# Store signing configuration securely. DO NOT COMMIT THIS FILE to version control.
+# Replace placeholders with your actual keystore details.
+KEYSTORE_FILE=keystore.jks
+KEYSTORE_PASSWORD=your_keystore_password
+KEY_ALIAS=app_alias
+KEY_PASSWORD=your_key_password
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# Recommended Gradle properties
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+android.useAndroidX=true
+# Enable Kotlin specific optimizations
+kotlin.incremental=true
