--- a/html/package.json
+++ b/html/package.json
@@ -1,7 +1,7 @@
 {
-    "title": "SB Admin 2",
-    "name": "startbootstrap-sb-admin-2",
-    "version": "4.1.3",
+    "title": "SNotePad HTML",
+    "name": "snotepad-html",
+    "version": "1.0.0",
     "scripts": {
         "start": "node_modules/.bin/gulp watch"
     },
