--- a/html/package.json
+++ b/html/package.json
@@ -45,6 +45,7 @@
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-clean-css": "4.3.0",
+        "gulp-concat": "^2.6.1",
         "gulp-header": "2.0.9",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
