--- a/html/package.json
+++ b/html/package.json
@@ -18,17 +18,15 @@
     ],
     "homepage": "https://startbootstrap.com/theme/sb-admin-2",
     "bugs": {
-        "url": "https://github.com/StartBootstrap/startbootstrap-sb-admin-2/issues",
+        "url": "https://github.com/aario/snotepad/issues",
         "email": "feedback@startbootstrap.com"
     },
     "license": "MIT",
-    "author": "Start Bootstrap",
-    "contributors": [
-        "David Miller (https://davidmiller.io/)"
-    ],
+    "author": "Aario Shahbany",
+    "contributors": [],
     "repository": {
         "type": "git",
-        "url": "https://github.com/StartBootstrap/startbootstrap-sb-admin-2.git"
+        "url": "https://github.com/aario/snotepad.git"
     },
     "dependencies": {
         "bootstrap": "^5.3.5",
