Implemented two way operation between the Android app and the Web app

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 android.useAndroidX=true
 # Enable Kotlin specific optimizations
 kotlin.incremental=true
+org.gradle.configuration-cache=true
