--- a/html/package.json
+++ b/html/package.json
@@ -33,6 +33,7 @@
         "chart.js": "2.9.4",
         "datatables.net-bs4": "1.10.24",
         "easymde": "^2.20.0",
+        "fuse.js": "^7.1.0",
         "hammerjs": "^2.0.8",
         "jquery": "3.6.0",
         "jquery.easing": "^1.4.1"
