--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,5 +117,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // for Material Components:
+    implementation 'com.google.android.material:material:1.12.0' // Use the latest stable version
 }
 
