Tried to implement drag and drop for folders on sidebar

--- a/html/package.json
+++ b/html/package.json
@@ -36,6 +36,8 @@
         "fuse.js": "^7.1.0",
         "hammerjs": "^2.0.8",
         "jquery": "3.6.0",
+        "jquery-ui-dist": "^1.13.3",
+        "jquery-ui-touch-punch": "^0.2.3",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
