--- a/html/package.json
+++ b/html/package.json
@@ -36,7 +36,8 @@
         "fuse.js": "^7.1.0",
         "hammerjs": "^2.0.8",
         "jquery": "3.6.0",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "sortablejs": "^1.15.6"
     },
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
